--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -49,26 +49,17 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: flake_lock
-    - id: check_file_changed
-      shell: pwsh
-      run: |
-        # Diff HEAD with the previous commit
-        $diff = git diff --name-only HEAD^ HEAD
-
-        # Check if a file under docs/ or with the .md extension has changed (added, modified, deleted)
-        $SourceDiff = $diff | Where-Object { $_ -match '.lock$' }
-        $HasDiff = $SourceDiff.Length -gt 0
-
-        # Set the output named "lockfile_changed"
-        Write-Host "::set-output name=lockfile_changed::$HasDiff"
     - name: Set up git
-      if: steps.check_file_changed.outputs.lockfile_changed == 'True'
       run: |
         git config user.email bots@kidsan.dev
         git config user.name "Git Bot"
     - name: Create and merge PR
-      if: steps.check_file_changed.outputs.lockfile_changed == 'True'
       run: |
+        if git diff --exit-code; then
+          echo "Found no changes"
+          exit 0
+        fi
+
         git switch -c updates-${{ github.run_id }}
         git commit -am "flake.lock: Update"
         git push -u origin updates-${{ github.run_id }}
@@ -77,7 +68,6 @@ jobs:
           --base main \
           --body "Automatic flake update on $(date -I)" \
           --fill \
-          --label bot \
           --title "Auto update $(date -I)")
         gh pr merge $PR --merge --delete-branch
       env:
