--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -66,7 +66,7 @@ jobs:
         git commit -am "flake.lock: Update"
         git push -u origin updates-${{ github.run_id }}
         PR=$(gh pr create \
-          --assignee kidsan \
+        #          --assignee kidsan \
           --base main \
           --body "Automatic flake update on $(date -I)" \
           --fill \
