ci: update nvim

--- a/.forgejo/workflows/update.yml
+++ b/.forgejo/workflows/update.yml
@@ -25,6 +25,8 @@ jobs:
       run: nix flake lock --update-input nixos
     - name: Update nixpkgs-wayland
       run: nix flake lock --update-input nixpkgs-wayland
+    - name: Update neovim-nightly-overlay
+      run: nix flake lock --update-input neovim-nightly-overlay
     - name: Commit and push
       run: |
         if git diff --exit-code; then
