--- a/.forgejo/workflows/update.yml
+++ b/.forgejo/workflows/update.yml
@@ -27,6 +27,10 @@ jobs:
       run: nix flake lock --update-input nixpkgs-wayland
     - name: Update neovim-nightly-overlay
       run: nix flake lock --update-input neovim-nightly-overlay
+    - name: Update home-manager
+      run: nix flake lock --update-input home-manager
+    - name: Update agenix
+      run: nix flake lock --update-input agenix
     - name: Commit and push
       run: |
         if git diff --exit-code; then
